[gd_scene load_steps=8 format=3 uid="uid://by433s3b5kvck"]

[ext_resource type="Script" uid="uid://3bvc0uu4vkpa" path="res://player/Player.gd" id="1_ulp21"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3c3w1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wnvi2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ulp21"]
albedo_color = Color(0.945549, 0.660173, 0.542843, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ulp21"]

[sub_resource type="BoxMesh" id="BoxMesh_3c3w1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3c3w1"]
albedo_color = Color(0.243137, 1, 1, 1)

[node name="Player" type="CharacterBody3D"]
process_mode = 3
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
script = ExtResource("1_ulp21")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
shape = SubResource("CapsuleShape3D_3c3w1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
mesh = SubResource("CapsuleMesh_wnvi2")
surface_material_override/0 = SubResource("StandardMaterial3D_ulp21")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="AttackRay" type="RayCast3D" parent="CameraPivot/Camera3D"]
target_position = Vector3(0, 0, -8)

[node name="Muzzle" type="Marker3D" parent="CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, -1, -5.1)

[node name="AttackArea" type="Area3D" parent="."]
visible = false
collision_layer = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(-1.5, -8.74228e-08, 0, 1.31134e-07, -1, 0, 0, 0, 2, 0, 0, -1.5)
visibility_parent = NodePath("../MeshInstance3D")
shape = SubResource("BoxShape3D_ulp21")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AttackArea"]
transform = Transform3D(1.50723, 0, 0, 0, 1.00482, 0, 0, 0, 2.00964, 0, 0, -1.5)
mesh = SubResource("BoxMesh_3c3w1")
surface_material_override/0 = SubResource("StandardMaterial3D_3c3w1")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
